# hackapizza

./: .env-template  .gitignore  .rag.settings  Justfile  Makefile  README.md  evaluation.csv  main.py  pyproject.toml  test_chroma.py
competition_data/: domande.csv
competition_data/Codice Galattico/: Codice Galattico.docx  ~$dice Galattico.docx
competition_data/Misc/: Distanze.csv  dish_mapping.json
competition_data/entities/: chefs.json  dishes.json  licenses.json  licenses_techniques.json  removed.json  techniques.json
data/: Graph Rag solution.csv  evaluation_dataset.csv  evaluation_dataset_1.csv  logs.txt  no_update_evaluation_dataset.csv  prev_evaluation_dataset.csv  winning_2_evaluation_dataset.csv  winning_3_evaluation_dataset.csv  winning_evaluation_dataset.csv
data/debug_vectorstore/: chroma.sqlite3  index.faiss  index.pkl
hackathon/: enums.py  main.py  models.py  session.py  session_manager.py
hackathon/graph/: consts.py  graph.py  models.py  prompts.py  state.py
hackathon/ingestion/: chains.py  codice_galattico.py  cooking_manual.py  galactic_code.py  manuale_cucina.py  menu.py  parser.py  prompts.py
hackathon/managers/: dataset_manager.py  model_manager.py  mongodb_store_manager.py  neo4j_store_manager.py  vectore_store.py
hackathon/utils/: file_utils.py  formatter.py
notebooks/: faiss.ipynb  ibm.ipynb  metadata.ipynb  placeholder.ipynb  table_parsing.ipynb
notebooks/data_ingestion/: codice_galattico.ipynb  manuale_cucina.ipynb  menu-metadata-extraction-test copy.ipynb  menu-metadata-extraction-test.ipynb  (+1 more)
vectorstore/: chroma.sqlite3
(+28 files in other folders)
