[project]
name = "hackathon"
version = "0.1.0"
description = "Hackathon"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.6",
    "pydantic>=2.10.5",
    "langchain>=0.3.10",
    "langchain-core>=0.3.29",
    "langchain-community>=0.3.10",
    "langchainhub>=0.1.21",
    "chromadb>=0.5.20",
    "langchain-experimental>=0.3.3",
    "langchain_google_community>=2.0.3",
    "langchain-openai>=0.2.11",
    "langchain-huggingface>=0.1.2",
    "python-magic>=0.4.27",
    "transformers>=4.48.0",
    "langchain_chroma>=0.1.4",
    "pymupdf>=1.25.1",
    "pyyaml>=6.0.2",
    "docx2txt>=0.8.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "crewai[agentops,tools]>=0.86.0,<1.0.0",
    "polars>=1.19.0",
    "langgraph>=0.2.62",
    "python-dotenv>=1.0.1",
    "marker-pdf>=1.2.4",
    "img2table>=1.4.0",
    "tesseract>=0.1.3",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
]

[tool.mypy]
disable_error_code = "import-untyped"

[project.scripts]
hackathon = "hackathon.main:run"
run_crew = "hackathon.main:run"
train = "hackathon.main:train"
replay = "hackathon.main:replay"
test = "hackathon.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
